--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "async-mutex": "^0.4.0",
     "debug": "^4.1.1",
     "globrex": "^0.1.2",
     "tsconfck": "^2.1.0"
